--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,8 @@ Unreleased changes
 	* Rewrote INSTALL and README files.
 	* Improved PRNG interface.
 	* Changed project description.
+	* Deprecated support for MASQFILE and IPCONNTRACK on Linux.
+		* Users of recent kernels are unaffected by this change.
 	* Deprecated support for Darwin.
 	* Deprecated support for FreeBSD 1-3.
 	* Deprecated support for FreeBSD 4.
