--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+2019-06-05  Janik Rabe  <oidentd@janikrabe.com>
+
+	* Show pf device path when open fails (OpenBSD)
+	* Remove snprintf(), vsnprintf() from libmissing
+
+2019-06-04  Janik Rabe  <oidentd@janikrabe.com>
+
+	* Use PACKAGE_NAME macro for syslog ident
+
+2019-05-28  Janik Rabe  <oidentd@janikrabe.com>
+
+	* Clarify error message in MASQ_MAP parser
+	* Remove unnecessary free(NULL) checks
+	* Remove duplicate colon in safe_open()
+	* Scan and print uid_t and gid_t as %lu
+
 2019-05-21  Janik Rabe  <oidentd@janikrabe.com>
 
 	* Symlink os.c instead of copying.
