--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-07-31  Hanno Böck  <hanno@gentoo.org>
+
+	* Fix overflow by using proper type for sizeof
+
 2019-06-05  Janik Rabe  <oidentd@janikrabe.com>
 
 	* Show pf device path when open fails (OpenBSD)
