--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-08-12  Janik Rabe  <oidentd@janikrabe.com>
+
+	* Released as version 2.4.0.
+
 2019-08-11  Janik Rabe  <oidentd@janikrabe.com>
 
 	* Set type of default UID and GID to unsigned long.
