--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-11-16  Janik Rabe  <oidentd@janikrabe.com>
+
+	* Revert deprecation of '--disable-masq' configure flag.
+
 2019-10-27  Janik Rabe  <oidentd@janikrabe.com>
 
 	* Add '--reply-all' option.
