--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2020-04-16  Janik Rabe  <oidentd@janikrabe.com>
 
+	* Released as version 2.5.0.
 	* Import documentation from website.
 
 2019-11-16  Janik Rabe  <oidentd@janikrabe.com>
