--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2020-09-12  Janik Rabe  <oidentd@janikrabe.com>
+
+	* Remove '--forward-last' flag (renamed to '--masquerade-first').
+
 2020-05-04  Janik Rabe  <oidentd@janikrabe.com>
 
 	* Compile with ENABLE_DEBUGGING by default.
