--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ Unreleased changes
 		* Run './configure' with '--disable-debug' to disable.
 	* Removed '--forward-last' ('-M') flag.
 		* Renamed to '--masquerade-first' ('-M').
+	* Removed libudb support.
 
 Changes in version 2.5.0
 
