--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
 	* Remove '--forward-last' flag (renamed to '--masquerade-first').
 	* Remove libudb support (deprecated).
+	* Remove '\e' escape sequence for strings in configuration files
+	  (deprecated).
 
 2020-05-04  Janik Rabe  <oidentd@janikrabe.com>
 
