Remove support for legacy kernels

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 	* Remove libudb support (deprecated).
 	* Remove '\e' escape sequence for strings in configuration files
 	  (deprecated).
+	* Remove support for legacy kernels (deprecated).
 
 2020-05-04  Janik Rabe  <oidentd@janikrabe.com>
 
