--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ Unreleased changes
 		* Renamed to '--masquerade-first' ('-M').
 	* Removed libudb support.
 	* Removed '\e' escape sequence for strings in configuration files.
+	* Removed support for legacy kernels.
 
 Changes in version 2.5.0
 
