--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,7 @@ Unreleased changes
 	* Removed libudb support.
 	* Removed '\e' escape sequence for strings in configuration files.
 	* Removed support for legacy kernels.
+	* Removed Linux MASQFILE support.
 
 Changes in version 2.5.0
 
