Remove Linux IPCONNTRACK support

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
 	  (deprecated).
 	* Remove support for legacy kernels (deprecated).
 	* Remove Linux MASQFILE support (deprecated).
+	* Remove Linux IPCONNTRACK support (deprecated).
 
 2020-05-04  Janik Rabe  <oidentd@janikrabe.com>
 
