[all] Update email address and/or project URL

--- a/AUTHORS
+++ b/AUTHORS
@@ -42,7 +42,7 @@ Jan Alexander Steffens <jan.steffens@gmail.com>
 Jan Rękorajski <baggins@pld-linux.org>
 	Support for listening on multiple IPs
 
-Janik Rabe <oidentd@janikrabe.com>
+Janik Rabe <info@janikrabe.com>
 	Everything else (project maintainer)
 
 Joerg Sonnenberger <joerg@bec.de>
