--- a/doc/oidentd.8.adoc
+++ b/doc/oidentd.8.adoc
@@ -188,8 +188,8 @@ FILES
 AUTHOR
 ------
 
-mailto:oidentd@janikrabe.com[Janik Rabe]::
-  https://oidentd.janikrabe.com
+mailto:info@janikrabe.com[Janik Rabe]::
+  https://janikrabe.com/projects/oidentd/
 
 Originally written by Ryan McCabe.
 
@@ -197,7 +197,7 @@ Originally written by Ryan McCabe.
 BUGS
 ----
 
-Please report any bugs to mailto:oidentd@janikrabe.com[Janik Rabe].
+Please report any bugs to mailto:info@janikrabe.com[Janik Rabe].
 
 
 SEE ALSO
