--- a/README
+++ b/README
@@ -17,7 +17,7 @@ The INSTALL file contains instructions for installing oidentd.  The HACKING
 file describes how to work with the source code.  Please consult the
 KERNEL_SUPPORT.md file for information about the supported kernels.
 
-oidentd is maintained and developed by Janik Rabe <oidentd@janikrabe.com>, with
+oidentd is maintained and developed by Janik Rabe <info@janikrabe.com>, with
 contributions from many people who are listed in the AUTHORS file.  oidentd was
 originally written by Ryan McCabe <ryan@numb.org>.
 
@@ -25,4 +25,4 @@ The most recent version of oidentd is available from
 <https://files.janikrabe.com/pub/oidentd/releases/latest/>.
 
 Please mail any feedback, questions, suggestions, patches, or bug reports to
-Janik Rabe <oidentd@janikrabe.com>.
+Janik Rabe <info@janikrabe.com>.
