--- a/doc/oidentd.conf.5.adoc
+++ b/doc/oidentd.conf.5.adoc
@@ -434,8 +434,8 @@ multiple lines:
 AUTHOR
 ------
 
-mailto:oidentd@janikrabe.com[Janik Rabe]::
-  https://oidentd.janikrabe.com
+mailto:info@janikrabe.com[Janik Rabe]::
+  https://janikrabe.com/projects/oidentd/
 
 Originally written by Ryan McCabe.
 
@@ -443,7 +443,7 @@ Originally written by Ryan McCabe.
 BUGS
 ----
 
-Please report any bugs to mailto:oidentd@janikrabe.com[Janik Rabe].
+Please report any bugs to mailto:info@janikrabe.com[Janik Rabe].
 
 
 SEE ALSO
