Drop NAT support for DragonFly BSD
Kernel module `freebsd.c` hasn't been updated in a long time and does
not compile on recent versions of DragonFly BSD.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2021-04-25  Janik Rabe  <oidentd@janikrabe.com>
 
 	* Drop support for very old FreeBSD versions.
+	* Drop NAT support for DragonFly BSD.
 
 2020-09-12  Janik Rabe  <oidentd@janikrabe.com>
 
