Create separate kernel module for DragonFly BSD

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 	* Drop support for very old FreeBSD versions.
 	* Drop NAT support for DragonFly BSD.
 	* Drop NAT support for FreeBSD.
+	* Create separate kernel module for DragonFly BSD.
 
 2020-09-12  Janik Rabe  <oidentd@janikrabe.com>
 
