--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2021-05-01  Janik Rabe  <oidentd@janikrabe.com>
+
+	* Released as version 2.5.1.
+
 2021-04-30  Janik Rabe  <oidentd@janikrabe.com>
 
 	* Fix ident lookups on FreeBSD 13+.
