--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Unreleased changes
+
+	* Allow using masquerading without IPv6 support on Linux.
+
 Changes in version 3.0.0
 
 	* Support for '--debug' is now included by default.
