--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2023-03-11  Janik Rabe  <info@janikrabe.com>
+
+	* Released as version 3.1.0.
+
+2023-03-09  Janik Rabe  <info@janikrabe.com>
+
+	* Remove `-S` (`--nosyslog`) from systemd unit files
+	* Warn about missing logs if forking with NOSYSLOG set
+
 2021-08-17  Janik Rabe  <info@janikrabe.com>
 
 	* Allow using masquerading without IPv6 support on Linux.
