--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
-Unreleased changes
+Changes in version 3.1.0
 
 	* Allow using masquerading without IPv6 support on Linux.
+	* Remove `-S` (`--nosyslog`) from systemd unit files.
+	* Warn about missing logs if forking with NOSYSLOG set.
 
 Changes in version 3.0.0
 
