Link to GitHub for bug reports and pull requests
I don't always have time to reply to emails so it wouldn't be fair of me to ask
people to email me and then leave them waiting.

For questions, the IRC channel (see `doc/book/src/getting-started/support.md`)
seems to work well. There's a good number of knowledgeable people in there at
almost all times.

--- a/doc/oidentd_masq.conf.5.adoc
+++ b/doc/oidentd_masq.conf.5.adoc
@@ -94,7 +94,7 @@ Originally written by Ryan McCabe.
 BUGS
 ----
 
-Please report any bugs to mailto:info@janikrabe.com[Janik Rabe].
+Please report any bugs at <https://github.com/janikrabe/oidentd>.
 
 
 SEE ALSO
