--- a/README
+++ b/README
@@ -24,5 +24,5 @@ originally written by Ryan McCabe <ryan@numb.org>.
 The most recent version of oidentd is available from
 <https://oidentd.janikrabe.com/download>.
 
-Please mail any feedback, questions, suggestions, patches, or bug reports to
-Janik Rabe <info@janikrabe.com>.
+Please report any bugs or submit pull requests on GitHub:
+<https://github.com/janikrabe/oidentd>.
